--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
+    "@t3-oss/env-nextjs": "^0.11.0",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-table": "^8.17.3",
     "@vercel/og": "^0.6.2",
