--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# docker-compose.yml
-
 version: "3"
 
 services:
@@ -11,11 +9,20 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
+    deploy:
+      resources:
+        limits:
+          cpus: '0.8'
+          memory: 700M
 
   db:
-    image: postgres:latest
     environment:
       NEXT_PUBLIC_SUPABASE_URL: "${NEXT_PUBLIC_SUPABASE_URL}"
       NEXT_PUBLIC_SUPABASE_ANON_KEY: "${NEXT_PUBLIC_SUPABASE_ANON_KEY}"
       DIRECT_URL: "${DIRECT_URL}"
       DATABASE_URL: "${DATABASE_URL}"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.8'
+          memory: 700M
